[build-system]
# we can consider pinning a specific hatchling version for the tutorial
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tutorial_example_mvrachev"
version = "0.0.2"
authors = [
  { name="Martin Vrachev", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MVrachev/tutorial-example"
"Bug Tracker" = "https://github.com/MVrachev/tutorial-example/issues"
